--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><title>Saiodgm の 博客儿 - hi! ヾ(≧▽≦*)o</title><meta name="keywords" content="Saiodgm's blog"><meta name="author" content="Saiodgm"><meta name="copyright" content="Saiodgm"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta name="description" content="cqbz 最菜">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Saiodgm の 博客儿">
-<meta property="og:url" content="https://cqbzljt.github.io/index.html">
-<meta property="og:site_name" content="Saiodgm の 博客儿">
+<meta property="og:title" content="cqbzljh の blog">
+<meta property="og:url" content="https://cqbzljh.github.io/index.html">
+<meta property="og:site_name" content="cqbzljh の blog">
 <meta property="og:description" content="cqbz 最菜">
 <meta property="og:locale" content="zh_CN">
 <meta property="og:image" content="https://cqbzljt.github.io/img/avatar.png">
